# server

./: .gitignore  .pre-commit-config.yaml  Communication.drawio  EVENTS.md  build_package.py  forge-server-manager.code-workspace  html_template.py  makefile  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: OnPullRequest.yml  OnPush.yml  OnRelease.yml
client/: package-lock.json  package.json  tsconfig.json
client/src/: account.scss  account.template.html  account.ts  api.ts  common.scss  cookie.ts  dashboard.html  dashboard.scss  dashboard.template.html  dashboard.ts  ensure_token.ts  header.scss  header.template  header.ts  index.html  login.html  login.scss  login.template.html  login.ts  metadata.template  server.template.html  server.ts  style.scss
client/src/account/: account.scss  account.ts  index.template.html
client/src/dashboard/: dashboard.scss  dashboard.ts  index.template.html
client/src/header/: header.scss  header.template  header.ts
client/src/login/: index.template.html  login.scss  login.ts
client/src/scripts/: api.ts  types.ts
client/src/server/: index.template.html  server.scss  server.ts
mc_srv_manager/: forge_web_interface.py  version.py
server/src/: __init__.py  __main__.py  cache.py  config.json  config.py  debug_interface.py  decode_event.py  events_descriptions.json  forge_web_interface.py  gen_doc.py  http_code.py  http_server.py  installer.py  properties.py  server.py  version.py  websocket_server.py
server/src/bus/: __init__.py  bus.py  bus_data.py  bus_dispatcher.py  events.py  events.xml
server/src/core/: core.py
server/src/database/: __init__.py  database.py  types.py
server/src/forge/: debug_tk.py  installer.py  interface.py  properties.py  rcon.py  web_interface.py
server/src/minecraft/: Base_mc_server.py  __init__.py  data.xml  properties.py  properties.xml  rcon.py  web_interface.py
server/src/minecraft/forge/: installer.py  server.py
server/src/minecraft/vanilla/: installer.py  server.py
server/src/server/: base_server.py  database.py  http_server.py  server.py  websocket_server.py
server/src/user_interface/: Base_interface.py  __init__.py
server/src/user_interface/database/: __init__.py  database.py  types.py
server/src/user_interface/tk_window/: __init__.py
server/src/user_interface/web_server/: base_server.py  http_server.py  web_server.py  websocket_server.py
server/src/utils/: config.py  debug_tk.py  gen_doc.py  hash.py  http_code.py  misc.py  regex.py  version.py
tests/: bus_test.py
tests/end_to_end/: config.json  server_test.py
tests/integration/: config.json  server_test.py
