[project]
name = "mc-srv-manager"
version = "0.1.0"
description = "Minecraft Server Manager"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "argon2-cffi==23.1.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "Flask==3.1.0",
    "gamuLogger==3.1.4",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "requests==2.32.3",
    "soupsieve==2.7",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "Werkzeug==3.1.3",
    "dnspython==2.7.0",
    "eventlet==0.39.1",
    "greenlet==3.2.1",
    "python-socketio==5.13.0",
    "cache @ https://github.com/T0ine34/python-sample/releases/download/1.0.2/cache-1.0.2-py3-none-any.whl",
    "config @ https://github.com/T0ine34/python-sample/releases/download/1.0.2/config-1.0.2-py3-none-any.whl",
    "http_code @ https://github.com/T0ine34/python-sample/releases/download/1.0.2/http_code-1.0.2-py3-none-any.whl",
    "version @ https://github.com/T0ine34/python-sample/releases/download/1.0.2/version-1.0.2-py3-none-any.whl"
]

[project.scripts]
mc-srv-manager = "mc_srv_manager.__main__:main"

[tool.setuptools]
packages = ["mc_srv_manager", "mc_srv_manager.server", "mc_srv_manager.forge", "mc_srv_manager.utils", "mc_srv_manager.client", "mc_srv_manager.client.assets"]
package-data = { "mc_srv_manager" = ["client/**", "config.json"] }
include-package-data = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests"
]
