[project]
name = "mc-srv-manager"
version = "0.1.0"
description = "Minecraft Server Manager"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "argon2-cffi==23.1.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "Flask==3.1.1",
    "gamuLogger==3.2.2",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "requests==2.32.4",
    "soupsieve==2.7",
    "typing_extensions==4.13.2",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3",
    "dnspython==2.7.0",
    "eventlet==0.40.3",
    "greenlet==3.2.1",
    "python-socketio==5.14.0",
    "cache @ https://github.com/T0ine34/python-sample/releases/download/1.1.4/cache-1.1.4-py3-none-any.whl",
    "config @ https://github.com/T0ine34/python-sample/releases/download/1.1.4/config-1.1.4-py3-none-any.whl",
    "http_code @ https://github.com/T0ine34/python-sample/releases/download/1.1.4/http_code-1.1.4-py3-none-any.whl",
    "version @ https://github.com/T0ine34/python-sample/releases/download/1.1.4/version-1.1.4-py3-none-any.whl",
    "singleton @ https://github.com/T0ine34/python-sample/releases/download/1.1.4/singleton-1.1.4-py3-none-any.whl"
]

[project.scripts]
mc-srv-manager = "mc_srv_manager.__main__:main"
mc-srv-manager-event-decoder = "mc_srv_manager.decode_event:main"
mc-srv-manager-doc-gen = "mc_srv_manager.gen_doc:main"

[tool.setuptools]
packages = ["mc_srv_manager",
                "mc_srv_manager.bus",
                "mc_srv_manager.core",
                "mc_srv_manager.minecraft",
                    "mc_srv_manager.minecraft.forge",
                    "mc_srv_manager.minecraft.vanilla",
                "mc_srv_manager.user_interface",
                    "mc_srv_manager.user_interface.database",
                    "mc_srv_manager.user_interface.tk_window",
                    "mc_srv_manager.user_interface.web_server",
                "mc_srv_manager.utils",
                "mc_srv_manager.client",
                    "mc_srv_manager.client.assets"
            ]
package-data = { "mc_srv_manager" = [
    "client/**",
    "config.json",
    "minecraft/properties.xml",
    "bus/events.xml",
    "events_descriptions.json",
] }
include-package-data = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests"
]
