[project]
name = "modular-server-manager"
version = "0.1.3"
description = "Modular Server Manager"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi==23.1.0",
    "beautifulsoup4==4.13.4",
    "bs4==0.0.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "distro==1.9.0",
    "gamuLogger>=3.2.4",
    "idna==3.10",
    "requests>=2.32.4",
    "soupsieve==2.7",
    "typing_extensions==4.13.2",
    "urllib3==2.5.0",
    "cache @ https://github.com/T0ine34/python-sample/releases/download/1.1.6/cache-1.1.6-py3-none-any.whl",
    "config @ https://github.com/T0ine34/python-sample/releases/download/1.1.6/config-1.1.6-py3-none-any.whl",
    "version @ https://github.com/T0ine34/python-sample/releases/download/1.1.6/version-1.1.6-py3-none-any.whl",
]

[project.scripts]
modular-server-manager = "modular_server_manager.__main__:main"
modular-server-manager-event-decoder = "modular_server_manager.decode_event:main"
modular-server-manager-doc-gen = "modular_server_manager.gen_doc:main"

[tool.setuptools]
packages = ["modular_server_manager",
                "modular_server_manager.bus",
                "modular_server_manager.core",
                "modular_server_manager.minecraft",
                    "modular_server_manager.minecraft.forge",
                    "modular_server_manager.minecraft.vanilla",
                "modular_server_manager.user_interface",
                    "modular_server_manager.user_interface.database",
                "modular_server_manager.utils",
            ]
package-data = { "modular_server_manager" = [
    "config.json",
    "minecraft/properties.xml",
    "bus/events.xml",
    "events_descriptions.json",
] }
include-package-data = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests"
]
